<resources>
    <string name="com.crashlytics.android.build_id">561f1833-5fe3-4180-a60f-73ccde102a6c</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="auth_client_needs_enabling_title">An application requires Google Play Services to be enabled.</string>
    <string name="auth_client_needs_installation_title">An application requires installation of Google Play Services.</string>
    <string name="auth_client_needs_update_title">An application requires an update for Google Play Services.</string>
    <string name="auth_client_play_services_err_notification_msg">Google Play services error</string>
    <string name="auth_client_requested_by_msg">Requested by %1$s</string>
    <string name="auth_client_using_bad_version_title">An application attempted to use a bad version of Google Play Services.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"%1$s won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="API_MY_LOCATION_ACCURACY">"My Location 
Accurate to {0} meters"</string>
    <string name="API_OUTDATED_WARNING">This app uses an outdated version of Maps. It might not work properly.</string>
    <string name="BACK_TO_LIST">Back to list</string>
    <string name="CLOSE_SOFTKEY">Close</string>
    <string name="COMPASS_ALT_TEXT">Compass</string>
    <string name="MY_LOCATION_ALT_TEXT">My Location</string>
    <string name="ZOOM_IN_ALT_TEXT">Zoom in</string>
    <string name="ZOOM_OUT_ALT_TEXT">Zoom out</string>
    <string name="dav_map_copyrights_full">©%1$d Google - Imagery ©%2$d %3$s, Map data ©%4$d %5$s</string>
    <string name="dav_map_copyrights_google_only">©%1$d Google</string>
    <string name="dav_map_copyrights_imagery_only">©%1$d Google - Imagery ©%2$d %3$s</string>
    <string name="dav_map_copyrights_map_data_only">©%1$d Google - Map data ©%2$d %3$s</string>
    <string name="invalid_panorama_data">Invalid panorama.</string>
    <string name="network_unavailable">This program requires a data connection, and will retry automatically. Please check your signal strength. Is airplane mode on? Is roaming data disabled?</string>
    <string name="no_panorama_data">No panorama data set.</string>
    <string name="panorama_disabled">Picture no longer available</string>
    <string name="service_unavailable">Street View service unavailable.</string>
    <string name="street_range_name_format">%1$s %2$s</string>
    <string name="waiting_for_network">Data connection lost, retrying…</string>
    <string name="about">About</string>
    <string name="about_you">About You</string>
    <string name="active_female">Active</string>
    <string name="active_male">Active</string>
    <string name="activity">Activity</string>
    <string name="add_a_new_location">Add a new location</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="albums">Albums</string>
    <string name="app_feedback">I have some feedback!</string>
    <string name="app_id">464891386855067</string>
    <string name="app_name">Tinder</string>
    <string name="app_settings">App Settings</string>
    <string name="block">Unmatch</string>
    <string name="confirm">Confirm</string>
    <string name="delete_account">Delete Account</string>
    <string name="female">Female</string>
    <string name="hidden_in_discover">"You're not discoverable"</string>
    <string name="how_would_you_rate">How would you rate Tinder?</string>
    <string name="identify_as">I Am:</string>
    <string name="kilometers">Km.</string>
    <string name="logout">Logout</string>
    <string name="low_on_likes_get_unlimited_likes">Get Unlimited Likes</string>
    <string name="low_on_likes_show_me">Show Me</string>
    <string name="low_on_likes_text">We find you the best matches by learning from your swipes. Be more selective to help your thumb and your heart.</string>
    <string name="low_on_likes_title">Low on Likes</string>
    <string name="male">Male</string>
    <string name="messages">Messages</string>
    <string name="miles">Mi.</string>
    <string name="moment_dialog_hide_moments">"Hide %s's Moments"</string>
    <string name="moment_dialog_send_message">Like Moment &amp; Message %s</string>
    <string name="moment_likes">Moment Likes</string>
    <string name="my_moments">My Moments</string>
    <string name="new_matches">New Matches</string>
    <string name="not_now">Not Now</string>
    <string name="notifications">Notifications</string>
    <string name="plus_restore">Restore Purchase</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="report">Report</string>
    <string name="review">Review</string>
    <string name="show_distances_in">Show Distances in:</string>
    <string name="tap_the_stars">Tap the number of stars you would give us on a scale from 1-5.</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="thanks_for_your_feedback">Thanks for Your Feedback</string>
    <string name="turn_on_discover_meet">Enable discovery to meet new people nearby</string>
    <string name="turn_on_discover_mode">Enable Discovery</string>
    <string name="type_your_feedback">Please type your feedback here…</string>
    <string name="unfollow_moments">Unfollow Moments</string>
    <string name="we_like_you_too">Thanks! We like you too!</string>
    <string name="you_can_review_anytime">You can review us at any time from the menu.</string>
    <string name="super_likes">Super Likes</string>
    <string name="text_tab_activity">Activity Tab</string>
    <string name="text_tab_my_moments">My Moments Tab</string>
    <string name="turn_on_discover_button">Button Discovery On</string>
</resources>