<?xml version="1.0" encoding="utf-8"?>
<LinearLayout app:orientation="1" app:background="@c1470c/white" app:layout_width="@dimen/block_report_dialog_width" app:layout_height="-2">
    <com.tinder.views.CustomTextView app:layout_gravity="11" app:id="@id/btn_toggle_moments" app:layout_width="-1" app:layout_height="-2" app:text="@string/unfollow_moments" app:font="2" style="@style/button_dialog" />
    <View app:id="@id/view_separator" app:background="@color/gray_very_very_light" app:layout_width="-1" app:layout_height="@dimen/nav_divider_height" />
    <com.tinder.views.CustomTextView app:id="@id/btn_report" app:layout_width="-1" app:layout_height="-2" app:text="@string/report" app:font="2" style="@style/button_dialog" />
    <View app:id="@id/view_moments_separator" app:background="@color/gray_very_very_light" app:layout_width="-1" app:layout_height="@dimen/nav_divider_height" />
    <com.tinder.views.CustomTextView app:id="@id/btn_block" app:layout_width="-1" app:layout_height="-2" app:text="@string/block" app:font="2" style="@style/button_dialog" />
</LinearLayout>
