<?xml version="1.0" encoding="utf-8"?>
<FrameLayout app:layout_gravity="11" app:id="@id/rate_me_parent" app:background="@drawable/rounded_rectangle_white" app:layout_width="@dimen/width_dialog" app:layout_height="-2">
    <LinearLayout app:layout_gravity="11" app:orientation="1" app:id="@id/rate_me_content" app:paddingLeft="20dp" app:paddingTop="24dp" app:paddingRight="20dp" app:layout_width="@dimen/width_dialog" app:layout_height="-2" app:animateLayoutChanges="@bool/supportsLayoutTransitionToggle">
        <com.tinder.views.CustomTextView app:textSize="@dimen/dialog_title_size" app:textColor="@color/text_dark" app:gravity="11" app:layout_gravity="11" app:id="@id/rate_title_thanks" app:visibility="2" app:layout_width="-2" app:layout_height="-2" app:layout_marginBottom="@dimen/margin_small" app:text="@string/thanks_for_your_feedback" app:font="3" />
        <com.tinder.views.CustomTextView app:textSize="15dp" app:gravity="11" app:layout_gravity="11" app:id="@id/rate_detail_thanks" app:visibility="2" app:layout_width="-2" app:layout_height="-2" app:layout_marginTop="@dimen/margin_med" app:text="@string/you_can_review_anytime" app:font="2" style="@style/dialog_standard_body" />
        <com.tinder.views.CustomTextView app:textSize="@dimen/dialog_title_size" app:textColor="@color/text_dark" app:gravity="11" app:layout_gravity="11" app:id="@id/rate_title" app:layout_width="-2" app:layout_height="-2" app:layout_marginBottom="@dimen/margin_small" app:text="@string/how_would_you_rate" app:font="3" />
        <LinearLayout app:gravity="11" app:layout_gravity="11" app:orientation="0" app:id="@id/rate_layout_stars" app:layout_width="-1" app:layout_height="-2">
            <ImageView app:layout_gravity="11" app:id="@id/img_star_1" app:paddingTop="@dimen/padding_xsmall" app:paddingBottom="@dimen/padding_xsmall" app:layout_width="-2" app:layout_height="-2" app:layout_marginRight="@dimen/margin_xsmall" app:src="@drawable/star" />
            <ImageView app:id="@id/img_star_2" app:paddingTop="@dimen/padding_xsmall" app:paddingBottom="@dimen/padding_xsmall" app:layout_width="-2" app:layout_height="-2" app:layout_marginLeft="@dimen/margin_xsmall" app:layout_marginRight="@dimen/margin_xsmall" app:src="@drawable/star" />
            <ImageView app:id="@id/img_star_3" app:paddingTop="@dimen/padding_xsmall" app:paddingBottom="@dimen/padding_xsmall" app:layout_width="-2" app:layout_height="-2" app:layout_marginLeft="@dimen/margin_xsmall" app:layout_marginRight="@dimen/margin_xsmall" app:src="@drawable/star" />
            <ImageView app:id="@id/img_star_4" app:paddingTop="@dimen/padding_xsmall" app:paddingBottom="@dimen/padding_xsmall" app:layout_width="-2" app:layout_height="-2" app:layout_marginLeft="@dimen/margin_xsmall" app:layout_marginRight="@dimen/margin_xsmall" app:src="@drawable/star" />
            <ImageView app:id="@id/img_star_5" app:paddingTop="@dimen/padding_xsmall" app:paddingBottom="@dimen/padding_xsmall" app:layout_width="-2" app:layout_height="-2" app:layout_marginLeft="@dimen/margin_xsmall" app:src="@drawable/star" />
        </LinearLayout>
        <com.tinder.views.CustomTextView app:textSize="@dimen/dialog_title_size" app:textColor="@color/text_dark" app:gravity="11" app:layout_gravity="11" app:id="@id/rate_title_below" app:visibility="2" app:layout_width="-2" app:layout_height="-2" app:layout_marginTop="@dimen/margin_xsmall" app:text="@string/we_like_you_too" app:font="3" />
        <com.tinder.views.CustomTextView app:textSize="15dp" app:gravity="11" app:layout_gravity="11" app:id="@id/rate_detail" app:paddingBottom="24dp" app:layout_width="-2" app:layout_height="-2" app:layout_marginTop="@dimen/margin_med" app:text="@string/tap_the_stars" app:font="2" style="@style/dialog_standard_body" />
        <com.tinder.views.CustomEditText app:scrollbarStyle="2000000" app:textColorHint="@color/text_light" app:id="@id/rate_me_feedback_edittext" app:background="@c3374b/SmoothProgressBar_spbStyle" app:visibility="2" app:layout_width="-1" app:layout_height="-2" app:maxHeight="150dp" app:minHeight="150dp" app:hint="@string/type_your_feedback" app:textCursorDrawable="@color/orange" app:font="2" style="@style/dialog_standard_body" />
        <LinearLayout app:gravity="50" app:layout_gravity="5" app:orientation="0" app:id="@id/rate_layout_actions" app:paddingRight="-2dp" app:paddingBottom="8dp" app:visibility="2" app:layout_width="-2" app:layout_height="-2" app:layout_marginTop="@dimen/margin_large" app:animateLayoutChanges="false">
            <com.tinder.views.CustomTextView app:textColor="@color/text_light" app:id="@id/rate_action_neg" app:layout_width="-2" app:layout_height="-2" app:text="@string/not_now" app:font="2" style="@style/dialog_standard_action" />
            <com.tinder.views.CustomTextView app:id="@id/rate_action_pos" app:layout_width="-2" app:layout_height="-2" app:text="@string/review" app:font="2" style="@style/dialog_standard_action" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
